update preview to use boundary first